@@ -115,6 +115,7 @@ if (! $module_type) {
 	$table->rowstyle['edit3'] = 'display: none';
 	$table->rowstyle['edit4'] = 'display: none';
 	$table->rowstyle['edit5'] = 'display: none';
+	$table->rowstyle['edit6'] = 'display: none';
 }
 $agents = get_group_agents (array_keys (get_user_groups ()), false, "none");
 $module_types = get_db_all_rows_filter ('tagente_modulo,ttipo_modulo',
@@ -199,11 +200,20 @@ $table->data['edit4'][2] = __('Group');
 $table->data['edit4'][3] = print_select (get_modulegroups(),
 	'id_module_group', '', '', __('Select'), 0, true, false, false);
 
+$table->data['edit5'][0] = __('Username');
+$table->data['edit5'][1] = print_input_text ('plugin_user', '', '', 15, 60, true);
+$table->data['edit5'][2] = __('Password');
+$table->data['edit5'][3] = print_input_password ('plugin_pass', '', '', 15, 60, true);
+
+
+
+
+
 /* FF stands for Flip-flop */
-$table->data['edit5'][0] = __('FF threshold').' '.print_help_icon ('ff_threshold', true);
-$table->data['edit5'][1] = print_input_text ('min_ff_event', '', '', 5, 15, true);
-$table->data['edit5'][2] = __('Historical data');
-$table->data['edit5'][3] = print_checkbox ("history_data", 1, '', true);
+$table->data['edit6'][0] = __('FF threshold').' '.print_help_icon ('ff_threshold', true);
+$table->data['edit6'][1] = print_input_text ('min_ff_event', '', '', 5, 15, true);
+$table->data['edit6'][2] = __('Historical data');
+$table->data['edit6'][3] = print_checkbox ("history_data", 1, '', true);
 
 echo '<form method="post" id="form_edit" onsubmit="if (! confirm(\''.__('Are you sure?').'\')) return false;">';
 print_table ($table);
@@ -256,13 +266,13 @@ $(document).ready (function () {
 	$("#module_name").change (function () {
 		if (this.value <= 0) {
 //			$("td#delete_table-0-1").css ("width", "85%");
-			$("tr#delete_table-edit1, tr#delete_table-edit2, tr#delete_table-edit3, tr#delete_table-edit4, tr#delete_table-edit5").hide ();
+			$("tr#delete_table-edit1, tr#delete_table-edit2, tr#delete_table-edit3, tr#delete_table-edit4, tr#delete_table-edit5, tr#delete_table-edit6").hide ();
 			return;
 		}
 		$("td#delete_table-0-1, td#delete_table-edit1-1, td#delete_table-edit2-1").css ("width", "35%");
 		$("#form_edit input[type=text]").attr ("value", "");
 		$("#form_edit input[type=checkbox]").removeAttr ("checked");
-		$("tr#delete_table-edit1, tr#delete_table-edit2, tr#delete_table-edit3, tr#delete_table-edit4, tr#delete_table-edit5").show ();
+		$("tr#delete_table-edit1, tr#delete_table-edit2, tr#delete_table-edit3, tr#delete_table-edit4, tr#delete_table-edit5, tr#delete_table-edit6").show ();
 	});
 	
 	$("#groups_select").change (
