@@ -1,5 +1,10 @@
 2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* godmode/agentes/massive_edit_modules.php: add more (user and pass for
+	wmi or plugin) fields to massive edit.
+
+2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* include/functions_db.php: add new function "get_all_groups", this function
 	return all groups.
 	* operation/agentes/ver_agente.php: add another code block for to respond
